# mcp-m365-teams

./: .env.example  .gitattributes  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: AZURE_SETUP.md  QUICKSTART.md
examples/: config.json  usage_examples.md
src/mcp_m365_teams/: __init__.py  server.py
tests/: __init__.py  test_server.py
